force-app/main/default/objects/Analisis_PL__c/Analisis_PL__c.object-meta.xml
<CustomObject>
    <description>Almacena el análisis financiero P&amp;L estratégico de cada presupuesto.</description>
    <label>Análisis P&amp;L</label>
    <nameField>
        <displayFormat>PL-{0000}</displayFormat>
        <label>Folio Análisis</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Análisis P&amp;L</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>