force-app/main/default/objects/Analisis_PL__c/fields/Clave_Unica__c.field-meta.xml
<CustomField>
    <fullName>Clave_Unica__c</fullName>
    <externalId>true</externalId>
    <label>Clave Única</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>