force-app/main/default/objects/Analisis_PL__c/fields/Comision_Venta_2__c.field-meta.xml
<CustomField>
    <fullName>Comision_Venta_2__c</fullName>
    <description>Porcentaje de comisión para el segundo agente comercial o cargos adicionales.</description>
    <label>Comisión Comercial Agente 2 (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>