force-app/main/default/objects/Analisis_PL__c/fields/Comision_Venta__c.field-meta.xml
<CustomField>
    <fullName>Comision_Venta__c</fullName>
    <label>Comisión de Venta</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>