force-app/main/default/objects/Analisis_PL__c/fields/Costo_Financiamiento__c.field-meta.xml
<CustomField>
    <fullName>Costo_Financiamiento__c</fullName>
    <description>Monto calculado del costo financiero basado en los días de crédito otorgados.</description>
    <label>Costo Financiamiento ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>