force-app/main/default/objects/Analisis_PL__c/fields/Costo_Inversion__c.field-meta.xml
<CustomField>
    <fullName>Costo_Inversion__c</fullName>
    <label>Costo de Inversión</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>