force-app/main/default/objects/Analisis_PL__c/fields/Dias_Financiamiento__c.field-meta.xml
<CustomField>
    <fullName>Dias_Financiamiento__c</fullName>
    <label>Días de Financiamiento</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>