force-app/main/default/objects/Analisis_PL__c/fields/Gastos_Indirectos__c.field-meta.xml
<CustomField>
    <fullName>Gastos_Indirectos__c</fullName>
    <label>Gastos Indirectos</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>