force-app/main/default/objects/Analisis_PL__c/fields/ISR_Pct__c.field-meta.xml
<CustomField>
    <fullName>ISR_Pct__c</fullName>
    <label>ISR %</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>