force-app/main/default/objects/Analisis_PL__c/fields/Margen_Esperado__c.field-meta.xml
<CustomField>
    <fullName>Margen_Esperado__c</fullName>
    <label>Margen Esperado</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>