force-app/main/default/objects/Analisis_PL__c/fields/Presupuesto__c.field-meta.xml
<CustomField>
    <fullName>Presupuesto__c</fullName>
    <label>Presupuesto</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Análisis P&amp;L</relationshipLabel>
    <relationshipName>Analisis_PL</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>