force-app/main/default/objects/Analisis_PL__c/fields/Regalias__c.field-meta.xml
<CustomField>
    <fullName>Regalias__c</fullName>
    <label>Regalías</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>