force-app/main/default/objects/Analisis_PL__c/fields/RU_Pct__c.field-meta.xml
<CustomField>
    <fullName>RU_Pct__c</fullName>
    <label>RU %</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>